# useless-printer

./: .gitignore  Makefile.am  configure  configure.ac
src/: banner_font.h  builder.cpp  builder.h  color.cpp  color.h  doom_font.h  font.cpp  font.h  main.cpp  printer_builder.cpp  printer_builder.h  printer_func.cpp  printer_func.h  spec_func.h  spec_thread.cpp  spec_thread.h
src/font/: banner_font  doom_font  symbols  translator.sh
